@@ -3,6 +3,7 @@
  */
 package jsystem.utils;
 
+import java.util.Base64;
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
@@ -48,7 +49,7 @@ public class Encryptor {
 		byte[] enc = ecipher.doFinal(utf8);
 
 		// Encode bytes to base64 to get a string
-		return (new sun.misc.BASE64Encoder().encode(enc))+ENCRYPTION_TERMINATING_STRING;
+		return Base64.getEncoder().encode(enc)+ENCRYPTION_TERMINATING_STRING;
 	}
 
 	/**
@@ -70,7 +71,7 @@ public class Encryptor {
 		ecipher.init(Cipher.ENCRYPT_MODE, key);
 		dcipher.init(Cipher.DECRYPT_MODE, key);
 		// Decode base64 to get bytes
-		byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(str);
+		byte[] dec = Base64.getDecoder().decode(str);
 
 		// Decrypt
 		byte[] utf8 = dcipher.doFinal(dec);
